--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -32,7 +32,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Github action automatic update on $(date  +"%m-%d-%Y %H:%M:%S %Z")." -a
+        git commit -m "Github action automatic update on $(date  +"%m-%d-%Y %H:%M:%S %Z")." || echo "ignore commit failure, proceed"
         git push 
 #     - name: Push changes
 #       uses: ad-m/github-push-action@master
