--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -14,8 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-#       with:
-#           token: ${{ secrets.action }}
+      with:
+          token: ${{ secrets.action }}
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
