--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -2,7 +2,7 @@ name: Collect arXiv daily information
 
 on: 
   schedule:
-    - cron:  '1 */1 * * *'
+    - cron:  '1 8,20 * * *'
   push:
 
 jobs:
