--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -2,7 +2,7 @@ name: Collect arXiv daily information
 
 on: 
   schedule:
-    - cron:  '1 2,14 * * *'
+    - cron:  '0 */10 * * *'
   push:
 
 jobs:
