--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -2,7 +2,7 @@ name: Collect arXiv daily information
 
 on: 
   schedule:
-    - cron:  '2 */12 * * *'
+    - cron:  '*/30 * * * *'
   push:
 
 jobs:
@@ -16,10 +16,10 @@ jobs:
     - uses: actions/checkout@v3
 #       with:
 #           token: ${{ secrets.action }}
-    - name: Set up Python 3.7.1
-      uses: actions/setup-python@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.8.8
+        python-version: 3.8
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
